<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsContactActivity">

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_person_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_edit"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_edit_gray"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/iv_delete"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_delete_gray"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintRight_toLeftOf="@id/iv_edit" />

    <ImageView
        android:id="@+id/iv_name"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_person_gray"
        app:layout_constraintBottom_toBottomOf="@id/et_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_name" />

    <ImageView
        android:id="@+id/iv_phone"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/ic_phone_gray"
        app:layout_constraintBottom_toBottomOf="@id/et_phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_title_phone" />

    <TextView
        android:id="@+id/tv_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_name"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/iv_name"
        app:layout_constraintTop_toBottomOf="@id/iv_profile" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:focusable="false"
        android:inputType="none"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_title_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_name" />

    <View
        android:id="@+id/view_1"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="@id/et_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <TextView
        android:id="@+id/tv_title_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_phone"
        android:textSize="12sp"
        app:layout_constraintLeft_toRightOf="@id/iv_name"
        app:layout_constraintTop_toBottomOf="@id/view_1" />

    <EditText
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/transparent"
        android:focusable="false"
        android:inputType="none"
        android:maxLength="16"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_title_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_phone"
        tools:ignore="TextFields" />

    <View
        android:id="@+id/view_2"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="@id/et_phone"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_phone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/YaleBlue"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/SelectiveYellow"
        android:visibility="gone"
        app:cornerRadius="12dp"
        app:layout_constraintLeft_toRightOf="@id/bt_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:backgroundTint="@color/YaleBlue"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/SelectiveYellow"
        android:visibility="gone"
        app:cornerRadius="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/bt_save"
        app:layout_constraintTop_toBottomOf="@id/view_2" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>